--- a/ChangeLog
+++ b/ChangeLog
@@ -1,25 +1,27 @@
 Revision history for Rex
 
 {{$NEXT}}
- - API CHANGES
- - MAJOR
- - NEW FEATURES
- - ENHANCEMENTS
- - MINOR
- - BUG FIXES
- - DOCUMENTATION
- - REVISION
+ [API CHANGES]
 
-1.14.3.1-TRIAL 2024-10-30 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
  - Return only the first found command
  - Fix inconsistent augtool wrapper usage
  - Fix Config::Augeas detection
  - Fix on_change in update_system command on Redhat
 
+ [DOCUMENTATION]
+
+ [ENHANCEMENTS]
+
+ [MAJOR]
+
+ [MINOR]
+
  [NEW FEATURES]
  - Add config option to prepend Augeas commands
  - Add config option to control local Augeas backend
+
+ [REVISION]
 
 1.14.3 2023-08-05 Ferenc Erki <erkiferenc@gmail.com>
  - No code changes since the 1.14.2.3-TRIAL release
@@ -345,31 +347,497 @@ Revision history for Rex
  - Update description - Ferenc Erki
 
 1.7.0 2019-11-05 Ferenc Erki <erkiferenc@gmail.com>
- [Fixes virtualization type,role for Digital Ocean Droplets (close #1192)]
- - Mitch Broadhead
+ - Fix test dependency - Ferenc Erki
+ - Use perl to query environment - Ferenc Erki
+ - Test run failures with alternative commands - Ferenc Erki
+ - Cache CMDB lookups (fix #1239) - Ferenc Erki
+ - Test CMDB both with and without caching - Ferenc Erki
+ - Instantiate CMDB object during initialization - Ferenc Erki
+ - Remove redundant argument to rsync command - Steve Dondley
+ - Detect upstart (fix #1190) - Ferenc Erki
+ - Simplify quoting (close #1206) - Ferenc Erki
+ - Better message and remove unused variable (ref #1206) - Roy Storey
+ - Quote parameters that might have spaces (fix #807) - Roy Storey
+ - Resolve symlinks for file management commands (fix #1195, close #1199) -
+   Ferenc Erki
+ - Add resolve_symlink helper - Ferenc Erki
+ - Add symlink tests for file management commands - Ferenc Erki
+ - Update link of installation intructions - Ferenc Erki
+ - Update testing instructions - Ferenc Erki
+ - Update list of useful resources - Ferenc Erki
+ - Fix typos - Ferenc Erki
+ - Update supported Perl versions - Ferenc Erki
+ - Convert namespace separators from module to task (fix #1193) - Ferenc
+   Erki
+ - Add tests for package hooks (ref #1194) - Mitch Broadhead
+ - create_host: drop useless get_host invocation (close #1181) - Ali
+   Polatel
+ - Run extra tests on Travis - Ferenc Erki
+ - Ignore tidyness checks for generated extra tests - Ferenc Erki
+ - Rename perltidy test - Ferenc Erki
+ - Replace [ExtraTests] with [RunExtraTests] (fix #964) - Kent Fredric
+ - Use file command for file operations - Ferenc Erki
+ - Fix fallback method for getting username - Ferenc Erki
+ - Return username for local connections - Ferenc Erki
+ - only source ~/.profile if it really exists - Joachim Bargsten
+ - Accept critic for ProhibitExplicitReturnUndef - Ferenc Erki
+ - Accept critic for ProhibitNoStrict - Ferenc Erki
+ - Accept critic for ProhibitSubroutinePrototypes - Ferenc Erki
+ - Remove unnecessary subroutine prototype - Ferenc Erki
+ - Fix critic for ProhibitMutatingListFunctions - Ferenc Erki
+ - Fix critic for ProhibitSleepViaSelect - Erik Huelsmann
+ - Disable tidyness checks in perlcritic - Ferenc Erki
+ - improved error handling in run_task if task does not exist - Joachim
+   Bargsten
+ - Fixes virtualization type,role for Digital Ocean Droplets (close #1192)
+   - Mitch Broadhead
+ - Fix UID handling for OpenBSD (fix #1213) - Olivier Cherrier
+ - Added the Option 'continuous_read' to the documentation - elisdg
+ - Test for code tidyness - Ferenc Erki
+ - Fix placeholder matching for %h in ssh config. (#1214) - Max E. Aubrey
+ - Set minimum required Perl version to 5.10.1 - Ferenc Erki
+ - Use Travis CI for testing - Ferenc Erki
+ - added option to list all tasks, including hidden - Joachim Bargsten
+ - errorless git checkout if on checkout branch - Joachim Bargsten
+ - added clone_args as extra option for git checkout - Joachim Bargsten
+ - git checkout also supports environment settings for e.g. proxies -
+   Joachim Bargsten
+ - added ssh as possible protocols for git-based rex modules - Joachim
+   Bargsten
+ - Improve package handling on OpenBSD - Olivier Cherrier
+ - Enhance the OpenBSD User handling support - Olivier Cherrier
+ - Document the 'requiretty' setting with the sudo command - Erik Huelsmann
+ - delete_host: fix regex so it does not match on prefixes - Ali Polatel
+ - Added Oracle Linux (fix #1168, close #1174) - labbeduddel
+ - Ignore YAML-1.25 (fix #1197) - Ferenc Erki
+ - Adds SLE 15 / Leap 15.0 support - LeMerP
+ - Use virsh connect URI from config - Ferenc Erki
+ - Update README about contributing guide - Ferenc Erki
+ - Initial version of the contributing guide - Ferenc Erki
+ - Convert namespace separators from module to task (fix #1188) - Ferenc
+   Erki
+ - Add test for using needs with nested modules (ref #1188) - Ferenc Erki
+ - Added Virtuozzo as Red Hat clone. - iblinder
+ - Print warning instead of dying when delete_user called on non existing
+   user - Crimson Thompson
+ - Fix Pkgconf for Debian - Andy Beverley
 
 1.6.0 2017-12-03 Jan Gehring <jfried@rexify.org>
- [fix #1117 - run after hook after connection poped from connection stack]
- - Jan Gehring
+ - Check brctl command is available (resolves #1115) - perlancar
+ - fixed path bug in git scm checkout - Joachim Bargsten
+ - add Rexfile path to @INC, fixes bug with perl >=5.26 fixes #1170 - Jan
+   Gehring
+ - Added support for Devuan as clone of Debian. - Christophe Wolfhugel
+ - fix bug with before => ALL in modules - Joachim Bargsten
+ - fixed syntax bug and crash on windows - Jan Gehring
+ - catch exception if version command failed. detect() method must return
+   true/false not throw exception. - fix #1152 - Jan Gehring
+ - replace JSON::XS with JSON::MaybeXS - fix #1153 - Jan Gehring
+ - added initial docker box support - Jan Gehring
+ - indent code to be properly formatted - Yanick Champoux
+ - Allow connection config to be altered in before hook - Andy Beverley
+ - fix #1134 - redirect stderr to dev/null or to stdout - Jan Gehring
+ - fix #1066 - use Task::run() method to call the task code. - Jan Gehring
+ - fix #1117 - run after hook after connection poped from connection stack
+   - Jan Gehring
+ - restore old current task object. - fix #1150 - Jan Gehring
+ - mkfs for lvm volumes is optional - Samuele Tognini
+ - Get PkgConf working with Debian clones like Ubuntu - James D Bearden
+ - Use fail_ok in cron - Daniel Dico
+ - VirtInfo: check dmi sys_vendor for qemu - Ali Polatel
+ - Gentoo/layman: check repo exists for add_repo & add readd option - Ali
+   Polatel
+ - Libvirt: support to select cpu mode for KVM guests - Ali Polatel
+ - Libvirt: vm destroy must not die() for not-running VMs - Ali Polatel
+ - set_auth used before creating the task object - NDZ Prajith
+ - fix exit code on failed logins. we need to bitshift the return value of
+   a fork - Jan Gehring
+ - clearpart: fix partition regex for nvme - Ali Polatel
 
 1.5.0 2016-10-09 Jan Gehring <jfried@rexify.org>
- [Refactored Rex::Box to be able to programmatically load box definitions.]
- - Jan Gehring
+ - Rex::Pkg::Gentoo: Add support for slotted package specs - Ali Polatel
+ - only use srand() once. this caused a bug with sudo file writing.
+   sometimes it generated two identical files - Jan Gehring
+ - fix problem with locks when Rexfile is on a nfs share #1130 - Jan
+   Gehring
+ - fix running sudo on local connections - Jan Gehring
+ - don't format a partition which is part of vg - Jan Gehring
+ - Fix Rsync.pm paths and ports. - necrophcodr
+ - Fix uninitialized value warnings when using Augeas module - Andy
+   Beverley
+ - fixed #1116 - detect suse systems by regex - Jan Gehring
+ - load project libraries before system libraries. fix RexOps/Rex#1108 -
+   Jan Gehring
+ - fixed systemctl detection #1026 - Jan Gehring
+ - Service.pm: Fix service class for Gentoo & non-systemd - Ali Polatel
+ - Rex::Pkg::Gentoo: Smarter installed check to reinstall on USE updates -
+   Ali Polatel
+ - Handle different md5 styles on BSDs (fix #1099) - Ferenc Erki
+ - Catch exceptions when trying to run dmidecode - Ferenc Erki
+ - don't use is_ip function, so that it also works with older
+   Data::Validate::IP module - Jan Gehring
+ - Added some more tests to Rex::Box::Test - Jan Gehring
+ - Refactored Rex::Box to be able to programmatically load box definitions.
+   - Jan Gehring
+ - Die if undefined line is found during _append_or_update (fix #1044) -
+   Ferenc Erki
+ - fix a problem with creating boxes. catch errors - Jan Gehring
+ - Fix for  #1051 - Logger.pm - uninitialized value - Tamas Molnar
+ - reload sysctl if file changed - Jan Gehring
+ - use ensure or persistent for persistance - Jan Gehring
+ - fix an extra define on a hash - Solène Rapenne
+ - Detect Manjaro correctly (fix #993) - Ferenc Erki
+ - Don't warn on missing Rexfile when -e is used (fix #1032, ref #1010) -
+   Ferenc Erki
+ - Specify XenServer as RedHat (CentOS) clone - Walery Wysotsky
+ - added i_exec and i_exec_nohup function for better parameter quoting -
+   #872 - Jan Gehring
+ - refactored calls to run() function to use i_run() - Jan Gehring
+ - test for ipv4 - Jan Gehring
+ - don't set_connection if current task is the only one - Jan Gehring
+ - load Helper::Run module - Jan Gehring
+ - Give the kernel time to get informed of partition changes - Robert
+   Abraham
+ - Trying to fix #791 Now get_ssh_config_hostname sub returns a good
+   hosntame. - Paco Esteban
+ - also exclude directories - fix RexOps/Rex#904 - Jan Gehring
+ - push connection information to the new task - fix #1091 - Jan Gehring
+ - Add checking for ensure parameter and an error if ensure parameter isn't
+   present/absent - solene rapenne
+ - sysctl supports remove and keyword changed to ensure - solene rapenne
+ - Create Rexfile-example2 - alx542
+ - callback and options can both be used - Andrew Solomon
+ - Add an option to save a sysctl key/value in /etc/sysctl.conf - Solène
+   Rapenne
+ - Using OpenBSD rcctl tool for managing services - Solène Rapenne
+ - Add OpenBSD compatibility to test - solene rapenne
+ - Implemented LXC container support - Oleg Hardt
+ - try to add same update_system behaviour for as many systems as possible.
+   Fix for RexOps/Rex#546 - Jan Gehring
+ - backported has_feature_version functions - Jan Gehring
+ - Escape backquotes when run command via sudo in the remote host - Nikolay
+   A. Fetisov
 
 1.4.1 2016-07-16 Jan Gehring <jfried@rexify.org>
- [quote source and destination, so spaces in directory names are possible]
- - Jan Gehring
+ - bug with get_cloud_instances_as_group - Pierrick DINTRAT
+ - Adds 64bit module path to @INC for linux - Mitch Broadhead
+ - set ls quoting for fedora 24 which magically quotes filenames - Jan
+   Gehring
+ - added cache for can_run - Jan Gehring
+ - removed space from line ending. fixed test on centos 6 - Jan Gehring
+ - Don't add duplicates env variable in crontab - Rapenne Solène
+ - quote source and destination, so spaces in directory names are possible
+   - Jan Gehring
+ - fixed summary tests for netbsd - Jan Gehring
+ - run hooks before push_connection - Jan Gehring
+ - Don't hardcode LibXML dependency - Jan Gehring
+ - workaround for wrong behaviour with -f and windows symlinks - Jan
+   Gehring
+ - it seems that the channel sometimes doesn't get closed in time. so we
+   need an option to force close it after command run. - Jan Gehring
+ - fixed reporting for named resource - Jan Gehring
+ - pass cli parameters to tasks for pre 1.4 feature flags. fix #1039 - Jan
+   Gehring
+ - fixed old style Rex::Args->get when called from outside a task - Jan
+   Gehring
+ - Fix for #1054 - get_private_key() to check the private key file - Tamas
+   Molnar
+ - Fix for #1052 - mask sudo_password in debug log - Tamas Molnar
+ - exit rex with an exitcode of 1 if some tests failed. fix #989 - Jan
+   Gehring
+ - show how to assign a user with a non-default shell - Andrew Solomon
+ - Fix example code (fix #1034) - Ferenc Erki
+ - Update example tasknames - Ferenc Erki
+ - Add possible root cause to authentication error message (fix #671) -
+   Ferenc Erki
+ - Correct message for authentication problems - Ferenc Erki
+ - Avoid hardcoded path - Ferenc Erki
+ - Refactor calls to reporting - Ferenc Erki
+ - Refactor reporting message handling - Ferenc Erki
+ - Simplify detection of pkg change type - Ferenc Erki
+ - Refactor pkg on_change handling - Ferenc Erki
+ - Report each pkg modification (fix #838) - Ferenc Erki
+ - Revert "report all packages" - Ferenc Erki
+ - Timeout value should be passed in milliseconds - Ferenc Erki
+ - Fix compatibility with recent Net::SSH2 (fix #1023) - Ferenc Erki
+ - Only log masked password if one is being used - Ferenc Erki
+ - Avoid logging undefined host during connection - Ferenc Erki
+ - Refactor do_task - Ferenc Erki
+ - Backport task existence check for do_task from #1010 (fix #992) - Ferenc
+   Erki
+ - Initial tests for do_task - Ferenc Erki
+ - fix hardcoded git tag command - Kirill Babikhin
+ - Document perlcritic violations - Ferenc Erki
+ - Integer with leading zeros - Ferenc Erki
+ - Add S_IMODE - Ferenc Erki
+ - Variable declared in conditional statement - Ferenc Erki
+ - "require" statement with library name as string - Ferenc Erki
+ - "select" used to emulate "sleep" - Ferenc Erki
+ - Don't modify $_ in list functions - Ferenc Erki
+ - removed hard coded qemu-img create format and added use of driver_type
+   option. fix #948 - Jan Gehring
+ - added understandable error message when no virtualization module is
+   given. fix #949 - Jan Gehring
+ - print right error message if run_task is calling a task that is not
+   available. fix #970 - Jan Gehring
+ - on windows test for SSH connection type. fix #965 - Jan Gehring
+ - Add more tests for shared arrays - Ferenc Erki
+ - Add unshift for shared arrays - Ferenc Erki
+ - Add tests for unshift to shared arrays - Ferenc Erki
+ - Add pop for shared arrays - Ferenc Erki
+ - Add tests for pop from shared arrays - Ferenc Erki
+ - Add shift for shared arrays (fix #921) - Ferenc Erki
+ - Add tests for shift from shared arrays (ref #921) - Ferenc Erki
+ - Fix #967 - Harm Müller
+ - Add META.json to CPAN release - Kent Fredric
 
 1.4.0 2016-03-06 Ferenc Erki <ferki@cpan.org>
- [fix error code in $? after a run command which was introduced by 6c8441]
- - krimdomu
-
- [added ParamLookup and registering task parameter as template variables.]
- - Jan
+ - Normalize EOL characters earlier (fix #957) - Ferenc Erki
+ - fixed variable usage - Jan
+ - remove chr(13) everywhere - fix #957 - Jan
+ - cleanup newline(s) at the end. fix for #957 - Jan
+ - Increase timeout for read_buffer test (fix #954) - Ferenc Erki
+ - Test with a bit less output - Ferenc Erki
+ - Update read_buffer test for Windows - Ferenc Erki
+ - removed read_buffer reduction - Jan Gehring
+ - Handle partial last chunks from STDOUT and STDERR - Ferenc Erki
+ - Fix draining IO - Ferenc Erki
+ - Add initial tests for draining IO - Ferenc Erki
+ - fix continuous read bug - RexOps/#951 - Jan
+ - Reopen STDERR after loading Rexfile - Dmitry Kopytov
+ - Let service tests be silent - Ferenc Erki
+ - Don't confess upon failure of a non-resource (fix #936) - Ferenc Erki
+ - iptables_clear should clear only loaded tables - Dmitry Kopytov
+ - Fix copy-pasta POD errors - Ferenc Erki
+ - Make CPAN Testers happy for unsupported OSes - Ferenc Erki
+ - fixed issue of calling Rex::Args->get inside before_task_start -
+   RexOps/Rex#934 - krimdomu
+ - can't connect message must be ::info logging - krimdomu
+ - check if task is no object, and get the task object then - Jan Gehring
+ - removed connecting to mesages (change to debug level) - Jan Gehring
+ - added parameters to do_task and fixed LOCAL block - Jan Gehring
+ - fixed calling of exit hooks after summary - Jan Gehring
+ - Update docs for Rex::Task - Ferenc Erki
+ - Add docs for Rex::Shared::Var (fix #920) - Ferenc Erki
+ - Update sudo docs (fix #918) - Ferenc Erki
+ - Fix summary tests for Mac OS X - Ferenc Erki
+ - Add tests for task hooks - Ferenc Erki
+ - don't clone task object. When cloned
+   before_task_start/after_task_finished hooks doesn't work - fix #919 -
+   krimdomu
+ - debug output now gets displayed again. - fix RexOps/Rex#910 - krimdomu
+ - fix loading of Rexfile on perl 5.8.9 - RexOps/Rex#922 - krimdomu
+ - fixed loading of resource module in perl 5.8 - RexOps/Rex#917 - krimdomu
+ - try to fix failing tests on freebsd - #901 - krimdomu
+ - Fix POD - Ferenc Erki
+ - Unbundle AWS::Signature4 - Ferenc Erki
+ - Fix rendering of false values in templates - Ferenc Erki
+ - Test rendering of false values in templates - Ferenc Erki
+ - Avoid __Rexfile__ as dependency - Ferenc Erki
+ - Enable more feature flags for development releases - Ferenc Erki
+ - Use development versioning - Ferenc Erki
+ - Pass options to mkfs (#fix 905) - Ferenc Erki
+ - Don't fail mkfs if label is undefined - Ferenc Erki
+ - Skip creating filesystems for some reserved words - Ferenc Erki
+ - Check for fstype existence at the start - Ferenc Erki
+ - Update docs for partition command - Ferenc Erki
+ - Remove purge package action on arch (fix #867) - Ferenc Erki
+ - Use sysread for local exec interface too (fix #887) - Ferenc Erki
+ - Avoid bitshifting error code twice (fix #901) - Ferenc Erki
+ - add default values for cpu and memory - krimdomu
+ - some windows fixes for rexify command - krimdomu
+ - run shell detection a second time if first time failed - krimdomu
+ - remove unnecessary new lines - krimdomu
+ - moved detect method to base, because it is everywhere the same, created
+   direct_exec method for all interfaces - krimdomu
+ - remove error message, we don't need it for the tests - krimdomu
+ - fixed inheritance problem, moved shell() method to base class. -
+   krimdomu
+ - return always shell object - krimdomu
+ - load right cron module if os is *bsd and shell is csh - #883 - krimdomu
+ - use sysread to read from filehandle. fixes #887 - krimdomu
+ - Read STDOUT and STDERR in parallel (fix #756) - Ferenc Erki
+ - fix error code in $? after a run command which was introduced by 6c8441
+   - krimdomu
+ - print the error message in the summary when a task die()d - krimdomu
+ - readd close of stderr - krimdomu
+ - only update chained resource when the upper resource wasn't changed
+   before. Also removed 'inside resource check' because this is not needed
+   anymore due to stacked resources - krimdomu
+ - fix loading of libraries in lib directory when use -f path/to/Rexfile -
+   krimdomu
+ - fixed loading of rexfiles with -f - krimdomu
+ - load a rexfile also if it doesn't return a true value. This fixes a
+   regression - RexOps/Rex#513 - krimdomu
+ - fixed reporting of nested resources (changed resource) - krimdomu
+ - fixed firewall resource to work with ipv6 patch - krimdomu
+ - added Rex::Args->get method again. fixes #860 - krimdomu
+ - Refactor Rex::TaskList.  No functional change. - Eric Johnson
+ - fixed tests for windows - krimdomu
+ - added tmp to gitignore - krimdomu
+ - Add Rex::Commands::Mkfs to rexify and pp.args - Ferenc Erki
+ - The after hook now runs even if the ssh connection fails. - Eric Johnson
+ - added archlinux support - Harm Müller
+ - support key_url and key_file also on redhat systems - krimdomu
+ - also lookup task name in cmdb - krimdomu
+ - Fix regression in deprecated static call to Rex::Task->run() - Eric
+   Johnson
+ - Fix links in README (fix #853) - Ferenc Erki
+ - Output full task names (fix #825, close #842) - Daniel Cesario
+ - use empty string to prevent uninitialized warning messages - krimdomu
+ - make environment available inside cmdb template - krimdomu
+ - color for windows - krimdomu
+ - defaults for cpus and memory - krimdomu
+ - call after task hook, even if connection to system failed - krimdomu
+ - fix after hook call for connections that wasn't successfull - krimdomu
+ - Fix passing memory/cpus options to constructor - Ferenc Erki
+ - Allow tests so set Box memory and cpus (close #839) - Patrick Lauer
+ - Exit with an error message when a bad task name is used. - Eric Johnson
+ - Exit codes now work when using 'rex -e' (fix #761, close #840) - Eric
+   Johnson
+ - Fix indentation - Eric Johnson
+ - Refactor out some code into handle_lock_file() - Eric Johnson
+ - Refactor out logic for loading server ini file into
+   load_server_ini_file(). - Eric Johnson
+ - Put Rexfile exists check inside load_rexfile() - Eric Johnson
+ - Simplify loading the Rexfile and improve error handling. - Eric Johnson
+ - Add missing Data::Dumper import - Ken Crowell
+ - Tests for needs() were not useful.  Now they are. - Eric Johnson
+ - allow mix of modules.rexify.org modules and git modules - Jan
+ - Fix summary test tasks for Windows - Ferenc Erki
+ - Add support for ip6tables (close #795) - Dmitry Kopytov
+ - Prefer uid over getlogin as fallback username (close #793, fix #792) -
+   Ferenc Erki
+ - Sort failure list - Ferenc Erki
+ - Further simplify summary output - Ferenc Erki
+ - Refactor summary output - Ferenc Erki
+ - Use error level output in the summary if some tasks failed - Ferenc Erki
+ - added AWS::Signature4 directly to code, due to problems with Centos5
+   dependencies (#737) - Jan
+ - ignore eclipse files - Jan
+ - fixed call of task as functions with normal parameters, #827 - Jan
+ - allow config (set) vars in cmdb templates - Jan
+ - Fix template handling in YAML CMDB files - Ferenc Erki
+ - YAML cmdb can now contain template code - Jan
+ - don't concat caller package anymore - Jan
+ - fixed some unitialized warnings - Jan
+ - fixed lookup path for arp command - Jan
+ - report all packages - Jan
+ - allow nested resources in reports - Jan
+ - use md5 binary if perl module is not available - fix for #834 - Jan
+ - default to empty task list - Jan
+ - don't print summary on rex -T - Jan
+ - use can_run to detect arp command - Jan Gehring
+ - Custom storage path for kvm - Prajithp
+ - give server configuration precedence - Jan
+ - detect iptables version and choose syntax for ip adresses - Jan
+ - fixed a logic bug, that prevents batch creation - Jan
+ - fixed a bug that was introduced by
+   b0416b1710611b900284ba5a2d9d74991fc4351b - Jan
+ - Ensuring that labels can be added to swap partitions - Peter H. Ezetta
+ - Ensure proper test-time connection type (fix #821) - Ferenc Erki
+ - Fix examples - Ferenc Erki
+ - Slightly reword synopsis - Ferenc Erki
+ - Updated pod in bin/rex and lib/Rex.pm - Eric Johnson
+ - Fix static side comments - Ferenc Erki
+ - Use static comments to avoid alignment change later - Ferenc Erki
+ - Checking for a running rex process failed if the pidfile contains a pid
+   that partially matches a running process. - petersonchen
+ - Updated documentation in bin/rex (pod/man page) - Eric Johnson
+ - fixed loading of Rex::Commands via require. RexOps/Rex#789 - Jan Gehring
+ - Recognize Raspbian as a Debian clone - Ferenc Erki
+ - Mute noisy tests - Ferenc Erki
+ - Added option for rebase during pull. - Eivin Giske Skaaren
+ - added feature flag for 1.4 and removed deprecated warning of
+   Rex::RunList - Jan
+ - Added a firewall module to manage different firewall models with one
+   interface. - Jan
+ - resource and task now have own namespace for template variables - Jan
+ - Exit codes need to be bit shifted by 8.  Do it in one place. - Eric
+   Johnson
+ - Summary tests for all permutations of Parallel::ForkManager, Base, and
+   exec_autodie - Eric Johnson
+ - Summarize success/failure at the end of a run - Eric Johnson
+ - added ParamLookup and registering task parameter as template variables.
+   - Jan
+ - Suppress STDERR during crontab listings - Ferenc Erki
+ - Fix managing a user's own crontab via cron_entry - Ferenc Erki
+ - Add _whoami to determine remote effective username - Ferenc Erki
+ - Add docs on glob usage with file command (close #712, fix #738) - Jose
+   Luis Perez Diez
+ - Map Debian clones correctly - Ferenc Erki
+ - Recognize LinuxMint as a Debian clone (close #506) - Ferenc Erki
+ - Fix GetRex link url - hiroraba
+ - Avoid unnecessary package rebuilds on Gentoo (close #809) - Patrick
+   Lauer
+ - Don't parse @ARGV on import. - Eric Johnson
+ - Refactor child/parent pid logic + comments to be more readable - Eric
+   Johnson
+ - Avoid race condition when doing IPC. - Eric Johnson
+ - Test for race condition problem in Rex::Shared::Var. - Eric Johnson
+ - Refactoring LVM.pm to use mkfs(); - Peter H. Ezetta
+ - refactor Partition.pm, fix $lv_name in Mkfs.pm - Peter H. Ezetta
+ - refactoring swap logic into mkfs logic, silly to separate. - Peter H.
+   Ezetta
+ - code cleanup and addition of POD - Peter H. Ezetta
+ - error checking on $lvname - Peter H. Ezetta
+ - setting up logic for lvm vs raw disk - Peter H. Ezetta
+ - starting to add option parsing - Peter H. Ezetta
+ - start of refactor mkfs/mkswap into their own pm - Peter H. Ezetta
+ - Fix undef warnings if calling get() without param - Andy Beverley
+ - lower exitecode to less than 255 because some os have problems with
+   larger ones - Jan
+ - Fatal exceptions if git switching fail - alex1line
+ - fix for Net::OpenSSH can't set initialize_options for the constructor -
+   #796 - Jan Gehring
+ - fixes the problem of run_task connecting to the wrong host #788 - Jan
+   Gehring
 
 1.3.3 2015-09-04 Ferenc Erki <ferki@rexify.org>
- [Take service name and rcvar mapping into account on FreeBSD (close #770)]
- - timp87
+ - Catch another way to manage services on FreeBSD (close #773) - timp87
+ - Fix generated links for Commands modules (fix #776) - Ferenc Erki
+ - Fix code block output when there's no space before closing tag - Ferenc
+   Erki
+ - Escape curly braces in template content - Ferenc Erki
+ - Force syncing package information on FreeBSD - Ferenc Erki
+ - Take service name and rcvar mapping into account on FreeBSD (close #770)
+   - timp87
+ - Check if systemctl is functional before using it (fix #753) - Ferenc
+   Erki
+ - Rearrange dist.ini - Ferenc Erki
+ - Fail early on unsupported Windows versions (fix #751) - Ferenc Erki
+ - Warn about missing environment instead of panicking (fix #742) - Ferenc
+   Erki
+ - Document alias of get_operating_system() - Ferenc Erki
+ - Fix perlcritic warnings about modifying list elements - Ferenc Erki
+ - Fix perlcritic warnings about two-argument open - Ferenc Erki
+ - Update auth docs - Ferenc Erki
+ - Fix docs for transaction (fix #686, close #766) - Elmer Quintanilla
+ - Fix ensure option for NetBSD services (close #759) - timp87
+ - Do not silently fail on update errors (close #758) - Andrew Beverley
+ - Fix ensure option for FreeBSD services (close #752) - timp87
+ - Enable Rex to manage system services on FreeBSD (#752) - timp87
+ - Recognize multi-arch packages on Debian (fix #748, close #755) - Erik
+   Huelsmann
+ - Fix Gentoo service detection (fix #747) - Ferenc Erki
+ - force apt-listchanges to not run - Anders Ossowicki
+ - Added doc about using regex for auth - Eivin Giske Skaaren
+ - Fixes #760 timeout for OpenSSH - Eivin Giske Skaaren
+ - Use the correct class for managing forks (fix #743) - Ferenc Erki
+ - Support key files for Debian repositories + add docs (close #736) - John
+   Karr
+ - Don't recreate connection during rethink_connection (fix #694, close
+   #727) - Mitch Broadhead
+ - Pass exception to on_rollback (fix #687, close #732) - Mitch Broadhead
+ - Document hostname expressions support in INI files - Ferenc Erki
+ - Support hostname expressions in INI files (close #713) - okaoka
+ - Document -O CLI option - Ferenc Erki
+ - Revert "Remove unused CLI option" (fix RexOps/rex-jobcontrol#10) -
+   Ferenc Erki
+ - make Fcntl calls os independent - Jan
+ - added a wrapper module for File::Spec - Jan
+ - Fix LEFT_PRECEDENCE typo - Dmitry Kopytov
+ - Add function for checkout of Git tags - Eivin Giske Skaaren
 
 1.3.2 2015-06-17 Ferenc Erki <ferki@rexify.org>
  - Use binmode as a function - Jan
@@ -520,11 +988,104 @@ Revision history for Rex
  - Generate docs for Rex::Test (fix #483) - Ferenc Erki
 
 1.0.0 2015-03-08 <jan.gehring, gmail.com>
- [CLI.pm: throw error if -T used with task arg, but no matching task found]
- - Brian Manning
-
- [fixed an issue that causes the parser to think the rexfile has an error]
- - Jan
+ - Remove hardcoded connection type (fix #579) - Ferenc Erki
+ - fixed systemd status query - Jan
+ - test output of tmpdir gathering before working with it. - Jan
+ - fixed removing some tmp files - Jan
+ - fixed some warnings for netstat listing if reading an unknown transport
+   layer - Jan
+ - added no_autodie feature flag - Jan
+ - fixed is_file() for files with spaces - Jan
+ - Fix POD - Ferenc Erki
+ - don't redirect stdout 2 times. freebsd don't like it - Jan
+ - added tty feature flag and sorted the flags - Jan
+ - added some defaults for kvm boxes (network) - Jan
+ - fixed autodie bug for is_symlink function - Jan
+ - added reconnect tries to Net::OpenSSH connections - Jan
+ - Allow spaces in Augeas values - Andrew Beverley
+ - Warn if Augeas command fails - Andrew Beverley
+ - fixed a problem if a server group was empty - Jan
+ - dist.ini: Add Twitter and IRC links to metaresources block - Brian
+   Manning
+ - Rex::Commands::MD5: Make Rex use the /sbin/md5 binary on OS X - Brian
+   Manning
+ - Rex::Commands::User: fix typo in POD (user_group -> user_groups) - Brian
+   Manning
+ - Rex::Helper:Run->i_run: check no_path_cleanup before calling get_path -
+   Brian Manning
+ - stop 'profile' before returning from a subroutine. - Andrej Zverev
+ - Speed up connecting to Boxes - Ferenc Erki
+ - allow call of run() command with arrayRef - Jan
+ - fixed sync_up/sync_down with Text::Glob - Jan
+ - fixed authentication, failing if try password auth without mentioning
+   pass_auth directly - Jan
+ - fixed line endings with openssh and pty - Jan
+ - Added possibility to use group() also as a resource function - Jan
+ - added possibility to define task parameters multiple times from cli. -
+   #516 - Jan
+ - fixed windows tests - #514 - Jan
+ - fixed #555 - default for Net::OpenSSH now also spawn a pty. Can be
+   disabled with feature no_tty - Jan
+ - Die if trying to run augeas without augtool installed (close #547) -
+   Andrew Beverley
+ - Skip db tests if there are missing dependencies (fix #548, close #549) -
+   Volker Kroll (vkroll)
+ - Restore perl-5.8.9 compatibility - Ferenc Erki
+ - Add test for minimum perl version required - Ferenc Erki
+ - Be more explicit about required perl version - Ferenc Erki
+ - Stop append_or_amend_line inserting extra blank lines - Andrew Beverley
+ - Add tests for append_or_amend_line - Andrew Beverley
+ - fixed Rex::Box with Net::OpenSSH - Jan
+ - rex/CLI.pm: update docs for Rex options - Brian Manning
+ - CLI.pm: throw error if -T used with task arg, but no matching task found
+   - Brian Manning
+ - fixed #539 - detect primary network address - Jan
+ - Add append_or_amend_line function to File command - Andrew Beverley
+ - Drop Rex::Helper::Glob - Ferenc Erki
+ - Suppress noisy test output - Ferenc Erki
+ - Suppress warning about a variable being used only once - Ferenc Erki
+ - Tidy up all the tests - Ferenc Erki
+ - Use more helpful test functions - Ferenc Erki
+ - use more appropriate functions from Test::More in tests - reneeb
+ - some class inherit cleanup - Jan
+ - Use correct path when using augeas insert - Andrew Beverley
+ - Return correct output from augtool - Andrew Beverley
+ - Fix false positive when using "augeas exists" - Andrew Beverley
+ - Optimise Rex::Commands::Augeas - Andrew Beverley
+ - Add user base class for those calls not supported in all OS - Andrew
+   Beverley
+ - Add password lock/unlock functions (Linux only) - Andrew Beverley
+ - fixed resource end - Jan
+ - Add PkgConf command to configure packages - Andrew Beverley
+ - fixed set_openssh_opt() function to allow multiple options - Jan
+ - fixed #527 - Rex::Output leaks semaphores and shared memory - Jan
+ - improved continous_read option for Net::SSH2 connection mode - Jan
+ - tail now also works with sudo also fixed #530 - Jan
+ - use Net::OpenSSH is now default. don't need feature flag 0.55 - Jan
+ - fixed line based operation with OpenSSH connection mode - Jan
+ - migrated augeas module into Rex core - #532 - Jan
+ - added partial sudo support for rsync command - Jan
+ - fixed #529 - odd number of elements - Jan
+ - fixed #528 -Amazon list_services, doesn't get all ec2 instances - thanks
+   to David Golovan - Jan
+ - fixed an issue that causes the parser to think the rexfile has an error
+   - Jan
+ - start of unit-test for Rex::Commands::DB - Volker Kroll (vkroll)
+ - better fix for #521, don't print all servers by rex -T. Also fixed group
+   authentication. - Jan
+ - patch from twitter/@tekcurmudgeon to allow setting of gpgkey for a
+   repository - Jan
+ - fixed late group lookup - #521 - Jan
+ - if the evaluation of the Rexfile was without syntax errors, but don't
+   return a true value, try to evaluate it manually. so is is not needed to
+   return a true value at the end. - fix for #513 - Jan
+ - fixed path resolution for private_key and public_key when used a ~
+   (tilde) sign. #517 - Jan
+ - fix rsync with port definition - #520 - Jan
+ - added parse_templates option to sync_up function, so that template
+   parsing can be prevented - #519 - Jan
+ - Rex::FS::File accepts filenames now - reneeb
+ - Add initial version of changelog generator - Ferenc Erki
 
 0.18 2011-09-01 Jan Gehring <jan.gehring, gmail.com>
  - added network support for Solaris, NetBSD, FreeBSD and OpenBSD
@@ -615,8 +1176,13 @@ Revision history for Rex
  - Fix typo - Ferenc Erki
 
 0.55.1 2014-10-25 Jan Gehring <jan.gehring, rexify.org>
- [status call for services with upstart and systemd may not work properly]
- - #460 - Jan
+ - status call for services with upstart and systemd may not work properly
+   - #460 - Jan
+ - sudo with -e cli flag doesn't work - #461 - Jan
+ - Cannot pass an argument with the value zero to a task - #463 - Jan
+ - Issue tracker not in META.yml - #464 - Ferenc Erki
+ - Allow specifying which tests to run as a parameter for Test:run #462 -
+   Ferenc Erki
 
 0.55.0 2014-10-19 Ferenc Erki <ferki, rexify.org>
  - vm names in quote. so they can contain spaces - Jan
@@ -796,11 +1362,31 @@ Revision history for Rex
  - fixed special mkdir() case on local windows runs.
 
 0.45.1 2014-04-11 Jan Gehring <jan.gehring, gmail.com>
- [read cpu information out of /proc/cpuinfo if dmidecode is not available]
- - #306
-
- [Handles the case where rsync is missing, and that makes Rex wait forever]
- - #331 - Joris DE POOTER
+ - no_overwrite option for file() function
+ - ensure 'directory' option for file() function
+ - added notifications
+ - pkg resource (replacement for install function)
+ - allow array for file() function
+ - check if iptables rule already exists
+ - creates option for run() resource
+ - only_if and unless option for run() resrouce
+ - added notification for service() resource
+ - added account() resource (as replacement for create_user)
+ - fixed SCM::Git to work with sudo
+ - update _parse_ip subroutine. be possible to parse ppp0. #328 - Tomohiro
+   Hosaka
+ - support -g to supply group name - #330 - fanyeren
+ - added openstack cloud support - Ferenc Erki
+ - run() resource support customized environments - #316 andrejzverev
+ - can_run() now returns the first command found as string - #193
+ - read cpu information out of /proc/cpuinfo if dmidecode is not available
+   - #306
+ - Handles the case where rsync is missing, and that makes Rex wait forever
+   - #331 - Joris DE POOTER
+ - fixed $Rex::Logger::format does not apply. - #335
+ - fixed download() command on windows - #271
+ - added cloud_image_list function()
+ - fixed debian system_update - #339 - Niklas Larsson
 
 0.44.6 2014-03-02 Jan Gehring <jan.gehring, gmail.com>
  - fixed wrong expansion of home paths #324
@@ -835,8 +1421,48 @@ Revision history for Rex
  - new cli parameter -qw for quiet with warnings - #294
 
 0.44.0 2014-01-25 Jan Gehring <jan.gehring, gmail.com>
- [SCM::Git, now uses cwd option of run() command, so it works also remote.]
- - #211 - atrodo
+ - docker support (experimental) - #278 - chenryn
+ - format the output of say() - #155
+ - userdefined columns for ps() command - #175 - dirkcjelli
+ - using tilde (~) sign for directories - #198 - gnouc, krimdomu
+ - SCM::Git, now uses cwd option of run() command, so it works also remote.
+   - #211 - atrodo
+ - Box default pkg update - #217 - endyman
+ - run_batch() command to run batches on demand - #222 - jorisd
+ - Allow "sed" function to work on multiple lines. - #227 - davidolrik,
+   krimdomu
+ - Added bulk_install() method for packages installing - #229 - jorisd
+ - Enable bulk_install for Gentoo and OpenWrt - #231 - ferki
+ - Added some hooks at central points in rex, so that it is possible to
+   control the behaviour of rex in some points.
+ - added on_change hook for sync_up/sync_down - #232
+ - Rex::Group::Lookup::Command - read hostnames from a command. - #233 -
+   fanyeren
+ - Improve user and group management on OpenWrt - #242 - ferki
+ - Add kernel module (un)loading support for OpenWrt - #243 - ferki
+ - Add service status support for OpenWrt - #246 - ferki
+ - make ssh read buffer configurable (for Net::SSH2 connections) - #247
+   this will speedup the connection, but may break on older systems!
+ - Add systemd service provider support for Gentoo - #250 - ferki
+ - Add systemd service provider support for Mageia - #282
+ - feature flag to deactivate path cleanup - #261
+ - feature flag to parse $HOME/.profile - #262
+ - Cloud::Amazon Check to make sure it is HASH before key look up - #263 -
+   oneness
+ - autodie feature if run() fail - #265
+ - added support for tcsh shell - #284
+ - Fix guestinfo for Gentoo - #236 - ferki
+ - get_host can't find aliases - #239, #240 - jorisd, ferki
+ - rsync get wrong user if using "auth for $task" - #252
+ - Flag existing feature sudo_without_sh as found - #253 - gittex
+ - Cleaned-Up Data module dependence - #254
+ - iptables arguments needs quote if they are whitespaced - #257 - jorisd
+ - add Pod encoding marker - #259 - sergeyromanov
+ - "needs" doesn't know how to call tasks from the main Rexfile - #260
+ - gathering alias network interfaces like eth0:0 - #264
+ - Cron: Jobs can be duplicated - #269 - jorisd
+ - FreeBSD: store netmask in dotted decimal format - #287 - andrejzverev
+ - Uninitialized value in OpenSSH.pm - #290 - samuelet
 
 0.43.7 2013-10-03 Jan Gehring <jan.gehring, gmail.com>
  - fixed problem with unconfigured network devices
